--- a/codePlacas/package.json
+++ b/codePlacas/package.json
@@ -32,7 +32,8 @@
     "postcss": "^8.4.39",
     "postcss-loader": "^8.1.1",
     "style-loader": "^3.0.0",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "yarn": "^1.22.22"
   },
   "keywords": [],
   "author": {
@@ -46,6 +47,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "electron-squirrel-startup": "^1.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.6.0"
   }
 }
